--- a/Themes/Counter Strike/Source/css/style.css
+++ b/Themes/Counter Strike/Source/css/style.css
@@ -5,10 +5,10 @@
     -ms-box-sizing: border-box;
     -o-box-sizing: border-box;
 }
-textarea:focus {
+.textarea:focus {
     outline: 0;
 }
-textarea {
+.textarea {
     border: 0;
     resize: none;
 }
@@ -28,7 +28,7 @@ html, body {
     -moz-user-select: none;
     -ms-user-select: none;
     -o-user-select: none;
-    cursor: default;
+    cursor: default !important;
 }
 body {
     background-color: black;
@@ -103,12 +103,28 @@ body {
     font-weight: bold;
     padding-bottom: 15px;
 }
-.cs-dialog textarea, .cs-dialog input[type=text] {
+.cs-dialog .textarea, .cs-dialog input[type=text] {
     background-color: rgba(0, 0, 0, 0.25);
     box-shadow: 1px 1px 0px rgba(0, 0, 0, 0.6) inset, 1px 1px 0px rgba(255, 255, 255, 0.6);
     width: 100%;
     height: 100%;
     border: 0;
+}
+.cs-dialog .textarea {
+    overflow: auto;
+    padding: 10px;
+    cursor: text !important;
+
+    user-select: text;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    -o-user-select: text;
+}
+.cs-dialog pre {
+    word-wrap: break-word;
+    padding-bottom: 15px;
+    height: 100%;
 }
 .cs-dialog .commandbar input[type=text] {
     position: relative;
@@ -153,7 +169,7 @@ body {
     bottom: 50px;
     top: 37px;
 }
-.logwindow textarea {
+.logwindow .textarea {
     color: white;
     font-size: 11px;
 }
