--- a/Themes/Windows 7/Source/css/style.css
+++ b/Themes/Windows 7/Source/css/style.css
@@ -145,6 +145,9 @@ icon#recycle_bin {
     top: 20px;
     left: 20px;
 }
+startmenupanel.focus ~ startmenu img{
+    opacity: 0.6;
+}
 startmenupanel.focus {
     display: block;
 }
@@ -224,6 +227,7 @@ startmenupanel #shortcuts {
 }
 
 startmenupanel #recent_program {
+    padding: 0 4px;
     position: absolute;
     left: 9px;
     bottom: 9px;
@@ -232,4 +236,69 @@ startmenupanel #recent_program {
     background-color: white;
     border-radius: 4px;
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.27),0 0 0 2px rgba(255, 255, 255, 0.34);
+}
+.recent_program_item {
+    padding: 4px 0px 0px;
+}
+.recent_program_item .program_name {
+    display: inline-block;
+    vertical-align: middle;
+}
+.recent_program_item .icon {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 7px;
+}
+
+.recent_program_item .icon img {
+    width: 32px;
+    height: 32px;
+}
+
+#bottom_bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+
+#search_box {
+    background-color: #f1f5fb;
+    padding: 11px;
+    box-shadow: 0 7px 5px -5px #ccd9ea inset;
+}
+
+#search_box input[type="text"] {
+    width: 100%;
+    box-shadow: 1px 1px 0 #666666 inset, 1px 1px 0 #929292;
+    border: 0;
+    border-radius: 1px;
+    padding: 2px 10px;
+    line-height: 16px;
+    font-size: 11px;
+}
+#search_box input[type="text"]::-webkit-input-placeholder { /* WebKit browsers */
+    color:    #6d6d6d;
+    font-style: italic;
+}
+#search_box input[type="text"]:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+    color:    #6d6d6d;
+    font-style: italic;
+}
+#search_box input[type="text"]::-moz-placeholder { /* Mozilla Firefox 19+ */
+    color:    #6d6d6d;
+    font-style: italic;
+}
+#search_box input[type="text"]:-ms-input-placeholder { /* Internet Explorer 10+ */
+    color:    #6d6d6d;
+    font-style: italic;
+}
+#all_programs span { 
+    margin-left: 20px;
+}
+
+#all_programs {
+    padding: 8px 0;
+    margin: 0 11px;
+    border-top: 1px solid #d6e5f5;
 }
