--- a/www/windows7/css/style.css
+++ b/www/windows7/css/style.css
@@ -379,8 +379,22 @@ window titlebar .window_controls span.control.close {
 }
 window content iframe {
     border: none;
+    position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 1;
+}
+window content .iframe_mask {
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+}
+window.focus content .iframe_mask {
+    display: none;
+}
+window.showmask content .iframe_mask {
+    display: block !important;
 }
 tasks {
     position: absolute;
